[package]
name = "ustr"
version = "1.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2024"
license = "BSD-2-Clause-Patent"
description = "Fast, FFI-friendly string interning."
documentation = "https://docs.rs/ustr"
repository = "https://github.com/anderslanglands/ustr"
readme = "README.md"
keywords = ["string", "interning", "FFI"]
categories = ["caching", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
## Enables several functions that allow interaction with the global string
## cache.
cache_access = []
## Enables serializing/deserializing the global string cache.
serde = ["dep:serde"]
## Enables facet reflection support for `Ustr`.
facet = ["dep:facet"]

[dependencies]
ahash = { version = "0.8", default-features = false }
byteorder = "1.5"
document-features = "0.2"
facet = { version = "0.33", optional = true }
lazy_static = "1.5"
parking_lot = "0.12"
serde = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
libc = "0.2"
serde_json = "1"
string-interner = "0.19"
string_cache = "0.8"

[badges]
travis-ci = { repository = "anderslanglands/ustr", branch = "master" }

[[bench]]
name = "creation"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "static_vs_dynamic"
harness = false
